[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/RuneButton.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/RunePlaceholder.tscn" type="PackedScene" id=2]

[node name="NewRune" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
rune_placeholder = ExtResource( 2 )

[node name="RuneButton" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_right = 83.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Mouse", "Rect", "Size Flags" ]

[connection signal="mouse_entered" from="RuneButton" to="." method="_on_RuneButton_mouse_entered"]

[connection signal="mouse_exited" from="RuneButton" to="." method="_on_RuneButton_mouse_exited"]

[connection signal="pressed" from="RuneButton" to="." method="_on_RuneButton_pressed"]


